[project]
name = "haztrak"
version = "0.8.0"
description = "An open-source web app illustrating how waste management software can interface with RCRAInfo to track hazardous waste"
readme = "README.md"
authors = [
    { name = "David Graham", email = "graham.david@epa.gov" },
]
maintainers = [
    { name = "David Graham", email = "graham.david@epa.gov" },
]
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]

license = { text = "MIT" }
requires-python = ">=3.12"

dependencies = [
    "django==5.1.5",
    "django-celery-results==2.5.1",
    "django-cors-headers==4.4.0",
    "django-extensions==3.2.3",
    "django-celery-beat==2.7.0",
    "djangorestframework==3.15.2",
    "gunicorn==22.0.0",
    "emanifest==4.0.3",
    "psycopg[binary]==3.2.1",
    "pytz==2024.2",
    "sqlparse==0.5.1",
    "tzdata==2024.2",
    "whitenoise==6.8.2",
    "celery==5.4.0",
    "redis==5.1.0",
    "drf-spectacular==0.27.2",
    "django-health-check==3.18.3",
    "dj-rest-auth[with-social]==6.0.0",
    "django-guardian==2.4.0",
    "django-allauth==0.61.1",
    "djangorestframework-simplejwt==5.3.1",
    "pillow==11.1.0",
]

[project.urls]
issues = "https://github.com/USEPA/haztrak/issues"
documentation = "https://usepa.github.io/haztrak/"
homepage = "https://github.com/USEPA/haztrak"
repository = "https://github.com/USEPA/haztrak"

[tool.ruff]
line-length = 99
exclude = [
    "**/migrations/*.py",
    ".venv",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint]
select = ["F", "E", "W", "Q"]
ignore = ["F401"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "haztrak.settings.test"


[tool.mypy]
plugins = [
    "mypy_django_plugin.main",
    "mypy_drf_plugin.main"
]
exclude = [
    "**/migrations/*.py"
]
enable_error_code = [
    "truthy-bool",
    "truthy-iterable",
    "redundant-expr",
    "unused-awaitable",
    "ignore-without-code",
    "possibly-undefined",
    "redundant-self",
]
allow_redefinition = false
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_explicit = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
explicit_package_bases = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_equality = true
strict_optional = true
show_error_codes = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[tool.django-stubs]
django_settings_module = ".haztrak.settings.test"
strict_settings = false

[dependency-groups]
dev = [
    "celery-types==0.22.0",
    "coverage==7.5.4",
    "django-stubs==5.0.4",
    "django-stubs-ext==5.0.4",
    "djangorestframework-stubs==3.15.0",
    "faker==26.1.0",
    "mypy==1.15.0",
    "mypy-extensions==1.0.0",
    "pre-commit==3.8.0",
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "pytest-django==4.8.0",
    "pytest-mock==3.14.0",
    "pytest-env==1.1.5",
    "pytest-xdist==3.6.1",
    "responses==0.25.3",
    "ruff==0.9.9",
]
