[metadata]
name = haztrak
version = attr: haztrak.__version__
url = https://www.github.com/dpgraham4401/haztrak
author = David Paul Graham
author_email = graham.david@epa.gov
description = An open-source example of how to interface with EPA's e-Manifest system
long_description = file: README.md
license = MIT

[options]
python_requires = >= 3.8
packages = find:
install_requires =
    asgiref==3.5.0
    certifi==2021.10.8
    charset-normalizer==2.0.12
    Django==4.0.4
    djangorestframework==3.13.1
    emanifest==2.0.2
    idna==3.3
    psycopg2==2.9.3
    pytz==2022.1
    requests==2.27.1
    requests-toolbelt==0.9.1
    sqlparse==0.4.2
    tzdata==2022.1
    urllib3==1.26.9

[flake8]
max-line-length = 88
max-complexity = 12
ignore = E501, W503, E203
per-file-ignores =
    server/apps/accounts/apps.py:F401
    */__init__.py:F401

[isort]
skip_glob = *_alter_*.py, *_initial.py
