[metadata]
name = haztrak
version = 0.1.0
url = https://www.github.com/dpgraham4401/haztrak
author = David Paul Graham
author_email = graham.david@epa.gov
description = An open-source example of how to interface with EPA's e-Manifest system
long_description = file: README.md
license = MIT

[options]
python_requires = >= 3.8
packages = find:
install_requires =
    asgiref==3.5.2
    certifi==2022.9.24
    charset-normalizer==2.1.1
    Django==4.1.3
    djangorestframework==3.14.0
    django-cors-headers==3.13.0
    gunicorn==20.1.0
    emanifest==2.0.5
    idna==3.4
    psycopg2-binary==2.9.5
    pytz==2022.1
    requests==2.28.1
    requests-toolbelt==0.10.1
    sqlparse==0.4.3
    tzdata==2022.1
    urllib3==1.26.12
    whitenoise==6.2.0
    python-dotenv~=0.21.0
    celery==5.2.7
    redis==4.3.4
    drf-spectacular==0.24.2

[flake8]
max-line-length = 88
max-complexity = 12
ignore = E501, W503, E203, E125
per-file-ignores =
    server/apps/accounts/apps.py:F401
    */__init__.py:F401

[isort]
skip_glob = *_alter_*.py, *_initial.py
