[metadata]
name = haztrak
version = 0.1.0
url = https://www.github.com/dpgraham4401/haztrak
author = David Paul Graham
author_email = graham.david@epa.gov
description = An open-source example of how to interface with EPA's e-Manifest system
long_description = file: README.md
license = MIT

[options]
python_requires = >= 3.8
packages = find:
install_requires =
    asgiref
    certifi
    charset-normalizer
    Django
    djangorestframework
    django-cors-headers
    gunicorn
    emanifest
    idna
    psycopg2-binary
    pytz
    requests
    requests-toolbelt
    sqlparse
    tzdata
    urllib3
    whitenoise
    python-dotenv
    celery
    redis
    drf-spectacular

[flake8]
max-line-length = 88
max-complexity = 12
ignore = E501, W503, E203, E125
per-file-ignores =
    server/apps/accounts/apps.py:F401
    */__init__.py:F401

[isort]
skip_glob = *_alter_*.py, *_initial.py

[tool:pytest]
DJANGO_SETTINGS_MODULE = haztrak.settings
